Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
+++ b/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -120,10 +121,10 @@
       "metadata": {
         "id": "kcB9Fyl22PNP",
         "colab_type": "code",
-        "outputId": "3025bb09-3a1d-4a6b-8c90-eea8f59b1ce6",
+        "outputId": "dbf4578d-52f5-4c80-c089-63f302e3fc9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 101
         }
       },
       "source": [
@@ -146,18 +147,15 @@
         "!date -R\n",
         "!ls"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n",
-            "Sat, 30 Nov 2019 01:25:08 +0000\n",
-            "Sat, 30 Nov 2019 01:25:15 +0000\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Sun, 01 Dec 2019 22:04:12 +0000\n",
+            "replace data/__init__.py? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n",
+            "Sun, 01 Dec 2019 22:04:21 +0000\n",
             "data  drive  sample_data  utils\n"
           ],
           "name": "stdout"
@@ -227,7 +225,7 @@
       "metadata": {
         "id": "2ZFGjMD72evm",
         "colab_type": "code",
-        "outputId": "491bfc2d-2b46-4e4b-bd05-0b7f4d133bb1",
+        "outputId": "79dde053-ab7b-456e-8cba-ff011ca5a81e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
@@ -259,7 +257,7 @@
         "plt.imshow(img_transformed)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -292,10 +290,10 @@
       "metadata": {
         "id": "apYPWK8S2ifW",
         "colab_type": "code",
-        "outputId": "601c59a5-5805-4833-8d07-6abb94f68fc4",
+        "outputId": "a1d28e15-60cd-4de6-ec38-3270d94629dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 84
         }
       },
       "source": [
@@ -334,15 +332,19 @@
         "train_list = make_datapath_list(phase=\"train\")\n",
         "val_list = make_datapath_list(phase=\"val\")\n",
         "\n",
-        "#train_list"
+        "#train_list\n",
+        "print(\"training data set：\"+ str(len(train_list)))\n",
+        "print(\"validating data set：\" +str(len(val_list)))"
       ],
-      "execution_count": 6,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/data/hymenoptera_data/train/**/*.jpg\n",
-            "/content/data/hymenoptera_data/val/**/*.jpg\n"
+            "/content/data/hymenoptera_data/val/**/*.jpg\n",
+            "training data set：242\n",
+            "validating data set：68\n"
           ],
           "name": "stdout"
         }
@@ -353,10 +355,10 @@
       "metadata": {
         "id": "0Xc8B38L2m3d",
         "colab_type": "code",
-        "outputId": "7911a21a-2a53-4322-b132-236544b5c481",
+        "outputId": "847b09c9-c84f-48b6-cb45-f55c31a8441c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 67
         }
       },
       "source": [
@@ -424,15 +426,17 @@
         "# 動作確認\n",
         "index = 0\n",
         "print(train_dataset.__getitem__(index)[0].size())\n",
-        "print(train_dataset.__getitem__(index)[1])"
+        "print(train_dataset.__getitem__(index)[1])\n",
+        "print(train_dataset.__len__())"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "torch.Size([3, 224, 224])\n",
-            "1\n"
+            "0\n",
+            "242\n"
           ],
           "name": "stdout"
         }
@@ -443,10 +447,10 @@
       "metadata": {
         "id": "FE5oHFOv2piu",
         "colab_type": "code",
-        "outputId": "c515a67b-b8ba-468a-d7ba-f8052439170b",
+        "outputId": "99f64b7b-87a2-41f0-87c5-2f3ce13656e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 50
         }
       },
       "source": [
@@ -470,13 +474,13 @@
         "print(inputs.size())\n",
         "print(labels)"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "torch.Size([8, 3, 224, 224])\n",
-            "tensor([1, 0, 0, 1, 0, 0, 0, 0])\n"
+            "tensor([0, 1, 1, 0, 1, 1, 1, 1])\n"
           ],
           "name": "stdout"
         }
@@ -487,10 +491,10 @@
       "metadata": {
         "id": "m2AwTyZQ2tmm",
         "colab_type": "code",
-        "outputId": "dae53653-e0c2-47ed-b957-1da2277853a5",
+        "outputId": "11177637-ff8a-4241-ffbc-10382e0ec75f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 67
         }
       },
       "source": [
@@ -507,13 +511,13 @@
         "\n",
         "print('ネットワーク設定完了：学習済みの重みをロードし、訓練モードに設定しました')"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/checkpoints/vgg16-397923af.pth\n",
-            "100%|██████████| 528M/528M [00:06<00:00, 90.7MB/s]\n"
+            "100%|██████████| 528M/528M [00:26<00:00, 20.5MB/s]\n"
           ],
           "name": "stderr"
         },
@@ -540,7 +544,7 @@
       "source": [
         "print(net)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,10 +618,10 @@
       "metadata": {
         "id": "L-ZyHfMU3KO-",
         "colab_type": "code",
-        "outputId": "fc3a533b-4573-4c61-ee3c-abacee79de96",
+        "outputId": "25e49ebf-b1e7-4e6a-ab31-cef8f4f41a20",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 158
+          "height": 152
         }
       },
       "source": [
@@ -640,7 +644,7 @@
         "print(\"-----------\")\n",
         "print(params_to_update)"
       ],
-      "execution_count": 23,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +769,7 @@
         "num_epochs=8\n",
         "train_model(net, dataloaders_dict, criterion, optimizer, num_epochs=num_epochs)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
