Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
+++ b/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
@@ -290,10 +290,10 @@
       "metadata": {
         "id": "apYPWK8S2ifW",
         "colab_type": "code",
-        "outputId": "a1d28e15-60cd-4de6-ec38-3270d94629dc",
+        "outputId": "6be0cde5-c6b7-4b25-df2b-a5e729cbb43d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 118
         }
       },
       "source": [
@@ -332,17 +332,28 @@
         "train_list = make_datapath_list(phase=\"train\")\n",
         "val_list = make_datapath_list(phase=\"val\")\n",
         "\n",
+        "#データの詳細を表示\n",
         "#train_list\n",
+        "class_num = len(os.listdir(path='/content/data/hymenoptera_data/train'))\n",
+        "class_name = os.listdir(path='/content/data/hymenoptera_data/train')\n",
+        "k=0\n",
+        "for i in class_name:\n",
+        "    print(class_name[k])\n",
+        "    k+=1\n",
+        "\n",
+        "\n",
         "print(\"training data set：\"+ str(len(train_list)))\n",
-        "print(\"validating data set：\" +str(len(val_list)))"
+        "print(\"validating data set：\"+str(len(val_list)))"
       ],
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/data/hymenoptera_data/train/**/*.jpg\n",
             "/content/data/hymenoptera_data/val/**/*.jpg\n",
+            "apple\n",
+            "strawberry\n",
             "training data set：242\n",
             "validating data set：68\n"
           ],
