Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
+++ b/Advanced_pytorch_転移学習_AppleStrawberry.ipynb
@@ -290,10 +290,10 @@
       "metadata": {
         "id": "apYPWK8S2ifW",
         "colab_type": "code",
-        "outputId": "6be0cde5-c6b7-4b25-df2b-a5e729cbb43d",
+        "outputId": "e09066e2-f1a9-4955-85bb-defe3b74fc93",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 169
         }
       },
       "source": [
@@ -336,26 +336,34 @@
         "#train_list\n",
         "class_num = len(os.listdir(path='/content/data/hymenoptera_data/train'))\n",
         "class_name = os.listdir(path='/content/data/hymenoptera_data/train')\n",
+        "print(class_name)\n",
         "k=0\n",
         "for i in class_name:\n",
-        "    print(class_name[k])\n",
+        "    print(class_name[k]+\"_train:\"+str(len(os.listdir(path='/content/data/hymenoptera_data/train/'+class_name[k]))))\n",
+        "    k+=1\n",
+        "k=0\n",
+        "for i in class_name:\n",
+        "    print(class_name[k]+\"_val:\"+str(len(os.listdir(path='/content/data/hymenoptera_data/val/'+class_name[k]))))\n",
         "    k+=1\n",
         "\n",
         "\n",
-        "print(\"training data set：\"+ str(len(train_list)))\n",
-        "print(\"validating data set：\"+str(len(val_list)))"
+        "print(\"training data set_total：\"+ str(len(train_list)))\n",
+        "print(\"validating data set_total：\"+str(len(val_list)))"
       ],
-      "execution_count": 50,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/data/hymenoptera_data/train/**/*.jpg\n",
             "/content/data/hymenoptera_data/val/**/*.jpg\n",
-            "apple\n",
-            "strawberry\n",
-            "training data set：242\n",
-            "validating data set：68\n"
+            "['apple', 'strawberry']\n",
+            "apple_train:150\n",
+            "strawberry_train:124\n",
+            "apple_val:44\n",
+            "strawberry_val:39\n",
+            "training data set_total：242\n",
+            "validating data set_total：68\n"
           ],
           "name": "stdout"
         }
