Colaboratory を使用して作成しました

--- a/Advanced_pytorch_転移学習GPU.ipynb
+++ b/Advanced_pytorch_転移学習GPU.ipynb
@@ -121,10 +121,10 @@
       "metadata": {
         "id": "kcB9Fyl22PNP",
         "colab_type": "code",
-        "outputId": "e904c1b0-d220-4a0e-ce01-d4b69bfba875",
+        "outputId": "f8e5cfd3-cf03-4965-f97a-93091cc97416",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 101
         }
       },
       "source": [
@@ -147,18 +147,15 @@
         "!date -R\n",
         "!ls"
       ],
-      "execution_count": 3,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n",
-            "Fri, 29 Nov 2019 16:46:52 +0000\n",
-            "Fri, 29 Nov 2019 16:46:56 +0000\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Mon, 02 Dec 2019 04:45:47 +0000\n",
+            "replace data/__init__.py? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n",
+            "Mon, 02 Dec 2019 04:45:57 +0000\n",
             "data  drive  sample_data  utils\n"
           ],
           "name": "stdout"
@@ -228,7 +225,7 @@
       "metadata": {
         "id": "2ZFGjMD72evm",
         "colab_type": "code",
-        "outputId": "a44c18bf-3c5c-4c9d-d3cd-cd10a39de15e",
+        "outputId": "547efde9-482e-4a48-8a87-ab81875cf8a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 521
@@ -260,7 +257,7 @@
         "plt.imshow(img_transformed)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -293,10 +290,10 @@
       "metadata": {
         "id": "apYPWK8S2ifW",
         "colab_type": "code",
-        "outputId": "920c810e-f8e7-42de-a85d-0f02d5d48846",
+        "outputId": "ab5c64b0-2bc6-4e62-b2ee-f2c6195c4c1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 169
         }
       },
       "source": [
@@ -335,15 +332,42 @@
         "train_list = make_datapath_list(phase=\"train\")\n",
         "val_list = make_datapath_list(phase=\"val\")\n",
         "\n",
-        "#train_list"
+        "\n",
+        "#データの詳細を表示\n",
+        "#train_list\n",
+        "class_num = len(os.listdir(path='/content/data/hymenoptera_data/train'))\n",
+        "class_name = os.listdir(path='/content/data/hymenoptera_data/train')\n",
+        "print(class_name)\n",
+        "k=0\n",
+        "for i in class_name:\n",
+        "    print(class_name[k]+\"_train:\"+str(len(os.listdir(path='/content/data/hymenoptera_data/train/'+class_name[k]))))\n",
+        "    k+=1\n",
+        "k=0\n",
+        "for i in class_name:\n",
+        "    print(class_name[k]+\"_val:\"+str(len(os.listdir(path='/content/data/hymenoptera_data/val/'+class_name[k]))))\n",
+        "    k+=1\n",
+        "\n",
+        "\n",
+        "print(\"training data set_total：\"+ str(len(train_list)))\n",
+        "print(\"validating data set_total：\"+str(len(val_list)))\n",
+        "\n",
+        "\n",
+        "#train_list\n"
       ],
-      "execution_count": 11,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "./data/hymenoptera_data/train/**/*.jpg\n",
-            "./data/hymenoptera_data/val/**/*.jpg\n"
+            "./data/hymenoptera_data/val/**/*.jpg\n",
+            "['ants', 'bees']\n",
+            "ants_train:124\n",
+            "bees_train:121\n",
+            "ants_val:70\n",
+            "bees_val:83\n",
+            "training data set_total：243\n",
+            "validating data set_total：153\n"
           ],
           "name": "stdout"
         }
@@ -354,14 +378,14 @@
       "metadata": {
         "id": "0Xc8B38L2m3d",
         "colab_type": "code",
-        "outputId": "3ab429b7-8f7e-46d7-eeb9-59724b8f6aa5",
+        "outputId": "07a116e0-8595-4a76-d49f-181a4079a836",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 50
         }
       },
       "source": [
-        "# イチゴとリンゴの画像のDatasetを作成する\n",
+        "# アリとハチの画像のDatasetを作成する\n",
         "\n",
         "\n",
         "class HymenopteraDataset(data.Dataset):\n",
@@ -406,12 +430,14 @@
         "        elif self.phase == \"val\":\n",
         "            label = img_path[28:32]\n",
         "\n",
-        "        # ラベルを数値に変更する\n",
-        "        if label == \"ants\":\n",
-        "            label = 0\n",
-        "        elif label == \"bees\":\n",
-        "            label = 1\n",
         "\n",
+        "        # ラベルを数値に変更する\n",
+        "        k=0\n",
+        "        for i in class_name: \n",
+        "          if label == (class_name[k])[0:4]:\n",
+        "              label = k\n",
+        "          k+= 1\n",
+        "     \n",
         "        return img_transformed, label\n",
         "\n",
         "\n",
@@ -427,7 +453,7 @@
         "print(train_dataset.__getitem__(index)[0].size())\n",
         "print(train_dataset.__getitem__(index)[1])"
       ],
-      "execution_count": 8,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,10 +470,10 @@
       "metadata": {
         "id": "FE5oHFOv2piu",
         "colab_type": "code",
-        "outputId": "fe7b6b38-9a21-4a57-a85d-3b8c08793a7a",
+        "outputId": "615f6b70-a557-4e4f-e523-8abb93a03aa0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 50
         }
       },
       "source": [
@@ -471,13 +497,13 @@
         "print(inputs.size())\n",
         "print(labels)"
       ],
-      "execution_count": 9,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "torch.Size([8, 3, 224, 224])\n",
-            "tensor([1, 0, 0, 0, 1, 1, 1, 0])\n"
+            "tensor([0, 1, 1, 0, 0, 1, 1, 0])\n"
           ],
           "name": "stdout"
         }
@@ -488,10 +514,10 @@
       "metadata": {
         "id": "m2AwTyZQ2tmm",
         "colab_type": "code",
-        "outputId": "9a18fcd6-3301-4a02-9dd9-14d2fef0e0bb",
+        "outputId": "aaf5d2eb-9442-4b13-c2ef-5fcb312dbfb0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 34
         }
       },
       "source": [
@@ -508,16 +534,8 @@
         "\n",
         "print('ネットワーク設定完了：学習済みの重みをロードし、訓練モードに設定しました')"
       ],
-      "execution_count": 10,
+      "execution_count": 34,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/checkpoints/vgg16-397923af.pth\n",
-            "100%|██████████| 528M/528M [00:15<00:00, 35.8MB/s]\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "stream",
           "text": [
@@ -532,16 +550,16 @@
       "metadata": {
         "id": "hTSXhIs97hPw",
         "colab_type": "code",
-        "outputId": "23bbfcba-e7ef-422a-9111-a068592912dd",
+        "outputId": "68b83160-595a-46b0-9b7e-7adf243d2076",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 809
+          "height": 776
         }
       },
       "source": [
         "print(net)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,10 +633,10 @@
       "metadata": {
         "id": "L-ZyHfMU3KO-",
         "colab_type": "code",
-        "outputId": "1d7fac1c-46e8-4a1a-fccc-aa4ad5432c2e",
+        "outputId": "f8058cb0-5f7a-400a-fa5f-df57cf4d3246",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 158
+          "height": 152
         }
       },
       "source": [
@@ -755,10 +773,10 @@
       "metadata": {
         "id": "vGqo5I7z3ai_",
         "colab_type": "code",
-        "outputId": "012c91e9-be0b-4153-e4a6-9b56497956b8",
+        "outputId": "87115c86-141e-4831-ae2a-21fbda599211",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 844
+          "height": 810
         }
       },
       "source": [
@@ -793,8 +811,8 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:02<00:00,  7.17it/s]\n",
-            "  3%|▎         | 1/31 [00:00<00:03,  9.23it/s]"
+            "100%|██████████| 20/20 [00:02<00:00,  7.33it/s]\n",
+            "  3%|▎         | 1/31 [00:00<00:03,  9.28it/s]"
           ],
           "name": "stderr"
         },
@@ -810,30 +828,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00,  7.93it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:02,  8.43it/s]"
+            "100%|██████████| 31/31 [00:02<00:00,  8.12it/s]\n",
+            "  5%|▌         | 1/20 [00:00<00:02,  8.42it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.3172 Acc: 0.8724\n"
+            "train Loss: 0.3160 Acc: 0.8724\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 11.13it/s]\n",
-            "  6%|▋         | 2/31 [00:00<00:02, 11.74it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.62it/s]\n",
+            "  6%|▋         | 2/31 [00:00<00:02, 13.43it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.1105 Acc: 0.9542\n",
+            "val Loss: 0.1106 Acc: 0.9542\n",
             "Epoch 3/8\n",
             "-------------\n"
           ],
@@ -842,30 +860,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 12.00it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:01,  9.93it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.84it/s]\n",
+            " 10%|█         | 2/20 [00:00<00:01, 11.67it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.1293 Acc: 0.9506\n"
+            "train Loss: 0.1250 Acc: 0.9506\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 12.45it/s]\n",
-            "  6%|▋         | 2/31 [00:00<00:02, 11.59it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.79it/s]\n",
+            "  6%|▋         | 2/31 [00:00<00:02, 12.80it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.0982 Acc: 0.9542\n",
+            "val Loss: 0.0987 Acc: 0.9542\n",
             "Epoch 4/8\n",
             "-------------\n"
           ],
@@ -874,30 +892,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 11.83it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:01,  9.86it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.58it/s]\n",
+            "  5%|▌         | 1/20 [00:00<00:02,  8.80it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.0493 Acc: 0.9794\n"
+            "train Loss: 0.0513 Acc: 0.9794\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 10.97it/s]\n",
-            "  3%|▎         | 1/31 [00:00<00:03,  9.50it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.54it/s]\n",
+            "  3%|▎         | 1/31 [00:00<00:03,  9.88it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.0853 Acc: 0.9673\n",
+            "val Loss: 0.0860 Acc: 0.9673\n",
             "Epoch 5/8\n",
             "-------------\n"
           ],
@@ -906,30 +924,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 12.36it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:02,  9.18it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.95it/s]\n",
+            "  5%|▌         | 1/20 [00:00<00:01,  9.57it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.0580 Acc: 0.9794\n"
+            "train Loss: 0.0570 Acc: 0.9794\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 11.77it/s]\n",
-            "  3%|▎         | 1/31 [00:00<00:03,  9.46it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.42it/s]\n",
+            "  6%|▋         | 2/31 [00:00<00:02, 11.33it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.1035 Acc: 0.9542\n",
+            "val Loss: 0.1038 Acc: 0.9542\n",
             "Epoch 6/8\n",
             "-------------\n"
           ],
@@ -938,30 +956,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 12.46it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:01,  9.55it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.52it/s]\n",
+            "  5%|▌         | 1/20 [00:00<00:01,  9.78it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.0856 Acc: 0.9671\n"
+            "train Loss: 0.0858 Acc: 0.9671\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 12.31it/s]\n",
-            "  3%|▎         | 1/31 [00:00<00:03,  8.72it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 12.73it/s]\n",
+            "  3%|▎         | 1/31 [00:00<00:03,  9.59it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.0966 Acc: 0.9542\n",
+            "val Loss: 0.0964 Acc: 0.9608\n",
             "Epoch 7/8\n",
             "-------------\n"
           ],
@@ -970,30 +988,30 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 12.93it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:02,  9.48it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.18it/s]\n",
+            " 10%|█         | 2/20 [00:00<00:01, 11.23it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.0985 Acc: 0.9712\n"
+            "train Loss: 0.0998 Acc: 0.9712\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 11.97it/s]\n",
-            "  6%|▋         | 2/31 [00:00<00:02, 11.48it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.68it/s]\n",
+            "  6%|▋         | 2/31 [00:00<00:02, 11.82it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.1162 Acc: 0.9608\n",
+            "val Loss: 0.1178 Acc: 0.9542\n",
             "Epoch 8/8\n",
             "-------------\n"
           ],
@@ -1002,29 +1020,29 @@
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 31/31 [00:02<00:00, 11.66it/s]\n",
-            "  5%|▌         | 1/20 [00:00<00:02,  9.16it/s]"
+            "100%|██████████| 31/31 [00:02<00:00, 12.51it/s]\n",
+            " 10%|█         | 2/20 [00:00<00:01, 11.29it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "train Loss: 0.0205 Acc: 0.9918\n"
+            "train Loss: 0.0210 Acc: 0.9918\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 20/20 [00:01<00:00, 12.12it/s]"
+            "100%|██████████| 20/20 [00:01<00:00, 11.63it/s]"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "val Loss: 0.0946 Acc: 0.9477\n"
+            "val Loss: 0.0938 Acc: 0.9542\n"
           ],
           "name": "stdout"
         },
